--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "url": "git@github.com:wix/tested-react-ts-mobx-boilerplate.git"
   },
   "scripts": {
+    "reset": "rimraf node_modules ./dist && yarn && yarn test",
     "test": "npm run test:browser",
-    "test:browser": "cross-env NODE_ENV=dev karma start --single-run",
-    "start": "cross-env NODE_ENV=dev webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "cross-env NODE_ENV=production webpack --progress --colors"
+    "test:browser": "karma start --single-run",
+    "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "build": "webpack --env.prod --progress --colors"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
@@ -24,7 +25,6 @@
     "@types/webpack": "^2.2.6",
     "autoprefixer": "^7.1.1",
     "classnames": "^2.2.5",
-    "cross-env": "^5.0.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
@@ -53,6 +53,7 @@
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.5",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
     "test-drive-react": "^0.1.93",
     "ts-loader": "^2.1.0",
