--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "url": "git@github.com:wix/tested-react-ts-mobx-boilerplate.git"
   },
   "scripts": {
-    "reset": "rimraf node_modules ./dist && yarn && yarn test",
-    "test": "npm run test:browser",
+    "e2e": "rimraf dist && yarn build && node scripts/test-e2e.js",
+    "reset": "rimraf node_modules dist && yarn && yarn test",
+    "test": "karma start --single-run && yarn e2e",
     "test:browser": "karma start --single-run",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
     "build": "webpack --env.prod --progress --colors"
@@ -36,6 +37,7 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.3",
+    "karma-typescript-preprocessor": "^0.3.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-react-devtools": "^4.2.15",
@@ -64,5 +66,6 @@
     "webpack-dev-server": "^2.5.0",
     "webpack-hot-middleware": "^2.18.0"
   },
-  "testGlob": "./test/**/*.spec.ts?(x)"
+  "testGlob": "./test/**/*.spec.ts?(x)",
+  "e2eGlob": "./e2e/**/*.spec.ts"
 }
